--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 <!--   	<springversion>3.2.4.RELEASE</springversion> -->
   		<springversion>4.3.17.RELEASE</springversion>
   		<junitversion>3.8.1</junitversion>
+  		<org.springframework-security-version>4.2.3.RELEASE</org.springframework-security-version>
   </properties>
   
   <dependencies>
@@ -81,6 +82,23 @@
             <artifactId>javax.servlet-api</artifactId>
             <version>3.0.1</version>
         </dependency>
+        
+        <dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
+    
+    	<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-taglibs</artifactId>
+			<version>${org.springframework-security-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>${org.springframework-security-version}</version>
+		</dependency>
     
   </dependencies>
   <build>
